Removes need for nav div, and fixes layout issues

--- a/javascript/restaurant/src/css/layout.global.css
+++ b/javascript/restaurant/src/css/layout.global.css
@@ -11,20 +11,6 @@ html {
   background-size: cover;
 }
 
-#nav {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 70px;
-}
-
-#nav > * {
-  flex: 1;
-}
-
 #container {
   display: flex;
   width: 100%;
@@ -34,14 +20,24 @@ html {
   flex-wrap: wrap;
 }
 
-#container > div {
+#container > div:first-child {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 70px;
+}
+
+
+#container > div:nth-child(n + 2) {
   flex: 1;
   width: 500px;
   margin: 10px;
 }
 
 @media only screen and (max-width: 600px) {
-  #container > div {
+  #container > div:nth-child(n + 2) {
     width: 80%;
   }
 }
